build for arm64

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,7 +11,11 @@ builds:
       - -s
       - -w
       - -X main.version={{.Version}}
+    goos:
+      - darwin
+      - linux
     goarch:
       - amd64
+      - arm64
 archives:
   - wrap_in_directory: true
