--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -10,7 +10,7 @@ builds:
     ldflags:
       - -s
       - -w
-      - -X main.version={{.Version}}
+      - -X pkg.utils.version={{.Version}}
     goos:
       - darwin
       - linux
