--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,13 @@ jobs:
       - name: Show available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
 
+      - name: Get lowercased owner name
+        run: echo "REPO_OWNER=${GITHUB_REPOSITORY_OWNER@L}" >> $GITHUB_ENV
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: traptitech
+          username: ${{ env.REPO_OWNER }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
@@ -63,5 +65,5 @@ jobs:
           build-args: |
             VERSION=${{ env.IMAGE_TAG }}
           tags: |
-            ghcr.io/traptitech/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/traptitech/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            ghcr.io/${{ env.REPO_OWNER }}/${{ env.IMAGE_NAME }}:latest
+            ghcr.io/${{ env.REPO_OWNER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
